Agentforce/force-app/main/default/objects/Action__c/Action__c.object-meta.xml
<CustomObject>
    <description>AD-190 - custom object to capture Actions against an Action Plan</description>
    <label>Action</label>
    <nameField>
        <displayFormat>ACT-{000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>