Agentforce/force-app/main/default/objects/Action__c/fields/Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-190 - lookup to an Action Plan from an individual Action</description>
    <label>Action Plan</label>
    <referenceTo>Action_Plan__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>