Agentforce/force-app/main/default/objects/Action__c/fields/Action_Required__c.field-meta.xml
<CustomField>
    <fullName>Action_Required__c</fullName>
    <label>Description</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>