Agentforce/force-app/main/default/objects/Action__c/fields/ActionCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>ActionCaseSafeID__c</fullName>
    <description>Action CaseSafeID</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ActionCaseSafeID</label>
    <type>Text</type>
</CustomField>