Agentforce/force-app/main/default/objects/Action__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <formula>ISPICKVAL(Status__c, &quot;Closed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ticked when Status = Closed</inlineHelpText>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>