Agentforce/force-app/main/default/objects/Action__c/fields/Current_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Current_Assignee__c</fullName>
    <formula>Owner:User.Full_Name__c</formula>
    <label>Current Assignee</label>
    <type>Text</type>
</CustomField>