Agentforce/force-app/main/default/objects/Action__c/fields/Days_Action_is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Days_Action_is_Overdue__c</fullName>
    <description>AD-130 - field to calculate the number of days from the current due date if the action is not completed</description>
    <formula>IF(
    ISPICKVAL(Status__c, &apos;Closed&apos;),
    IF(
        AND(
            NOT(ISBLANK(Due_Date__c)),
            NOT(ISBLANK(Close_Date__c)),
            Close_Date__c &gt; Due_Date__c
        ),
        Close_Date__c - Due_Date__c,
        null
    ),
    IF(
        AND(
            NOT(ISBLANK(Due_Date__c)),
            OR(
                ISPICKVAL(Status__c, &apos;Pending&apos;),
                ISPICKVAL(Status__c, &apos;In Progress&apos;),
                ISPICKVAL(Status__c, &apos;Overdue&apos;)
            ),
            TODAY() &gt; Due_Date__c
        ),
        TODAY() - Due_Date__c,
        null
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Action is Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>