Agentforce/force-app/main/default/objects/Action__c/fields/Days_to_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Overdue__c</fullName>
    <description>AD-130 - field to calculate the number of days from the current due date if the action is not completed only flow purposes</description>
    <formula>Due_Date__c-TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>