Agentforce/force-app/main/default/objects/Action__c/fields/Days_until_Action_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_until_Action_Due_Date__c</fullName>
    <description>AD-130 - field to calculate the number of days until an action is due</description>
    <formula>IF(
    OR(
        ISPICKVAL(Status__c, &apos;Pending&apos;),
        ISPICKVAL(Status__c, &apos;In Progress&apos;)
    ),
    IF(
        ISBLANK(Due_Date__c),
        null,
        Due_Date__c - TODAY()
    ),
    null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days until Action Due Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>