Agentforce/force-app/main/default/objects/Action__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>AD-130 - date to capture the current due date of the Action</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>