Agentforce/force-app/main/default/objects/Action__c/fields/Escalate_Email__c.field-meta.xml
<CustomField>
    <fullName>Escalate_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalate Email</label>
    <type>Checkbox</type>
</CustomField>