Agentforce/force-app/main/default/objects/Action__c/fields/Escalated_to__c.field-meta.xml
<CustomField>
    <fullName>Escalated_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escalated to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Actions1</relationshipName>
    <type>Lookup</type>
</CustomField>