Agentforce/force-app/main/default/objects/Action__c/fields/FM_Carbon_Impact_CO2eT__c.field-meta.xml
<CustomField>
    <fullName>FM_Carbon_Impact_CO2eT__c</fullName>
    <label>FM Carbon Impact (CO2eT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>