Agentforce/force-app/main/default/objects/Action__c/fields/Focus__c.field-meta.xml
<CustomField>
    <fullName>Focus__c</fullName>
    <label>Focus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Satisfaction</fullName>
            </value>
            <value>
                <fullName>Exceeding Customer Expectations</fullName>
            </value>
            <value>
                <fullName>Promote Customer</fullName>
            </value>
            <value>
                <fullName>Promote OCS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Contract Delivery</fullName>
                <isActive>false</isActive>
                <label>Contract Delivery</label>
            </value>
            <value>
                <fullName>Excelling Customer Expectations</fullName>
                <isActive>false</isActive>
                <label>Excelling Customer Expectations</label>
            </value>
            <value>
                <fullName>Non-Strategic Programme Action</fullName>
                <isActive>false</isActive>
                <label>Non-Strategic Programme Action</label>
            </value>
            <value>
                <fullName>Promote Clients Brand Reputation</fullName>
                <isActive>false</isActive>
                <label>Promote Clients Brand Reputation</label>
            </value>
            <value>
                <fullName>Promote Clients Market Position</fullName>
                <isActive>false</isActive>
                <label>Promote Clients Market Position</label>
            </value>
            <value>
                <fullName>Senior Client Objectives</fullName>
                <isActive>false</isActive>
                <label>Senior Client Objectives</label>
            </value>
            <value>
                <fullName>Stakeholder Satisfaction</fullName>
                <isActive>false</isActive>
                <label>Stakeholder Satisfaction</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>