Agentforce/force-app/main/default/objects/Action__c/fields/Legacy_AS_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_AS_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy AS Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>