Agentforce/force-app/main/default/objects/Action__c/fields/Legacy_OCS_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_OCS_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy OCS Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>