Agentforce/force-app/main/default/objects/Action__c/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <label>Next Step</label>
    <type>TextArea</type>
</CustomField>