Agentforce/force-app/main/default/objects/Action__c/fields/No_of_Closed_Actions__c.field-meta.xml
<CustomField>
    <fullName>No_of_Closed_Actions__c</fullName>
    <formula>No_of_Cancelled_Actions__c +  No_of_Completed_Actions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Closed Actions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>