Agentforce/force-app/main/default/objects/Action__c/fields/No_of_In_Progress_Actions__c.field-meta.xml
<CustomField>
    <fullName>No_of_In_Progress_Actions__c</fullName>
    <description>Populated by DLRS</description>
    <label># In Progress Actions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>