Agentforce/force-app/main/default/objects/Action__c/fields/No_of_Open_Actions__c.field-meta.xml
<CustomField>
    <fullName>No_of_Open_Actions__c</fullName>
    <formula>Total_No_of_Actions__c - No_of_Completed_Actions__c - No_of_Cancelled_Actions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Actions that are not Closed</inlineHelpText>
    <label># Open Actions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>