Agentforce/force-app/main/default/objects/Action__c/fields/No_of_Pending_Actions__c.field-meta.xml
<CustomField>
    <fullName>No_of_Pending_Actions__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Pending Actions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>