Agentforce/force-app/main/default/objects/Action__c/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NPS</label>
    <referenceTo>NPS__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>