Agentforce/force-app/main/default/objects/Action__c/fields/Original_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Due_Date__c</fullName>
    <description>AD-119 - date to capture the original due date when the Action is created</description>
    <label>Original Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>