Agentforce/force-app/main/default/objects/Action__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <formula>Owner:User.Full_Name__c</formula>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>