Agentforce/force-app/main/default/objects/Action__c/fields/Parent_Action__c.field-meta.xml
<CustomField>
    <fullName>Parent_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Action</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Action__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Action__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Child_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>