Agentforce/force-app/main/default/objects/Action__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <formula>IF(
No_of_Overdue_Actions__c &gt; 0, IMAGE(&quot;/resource/ProgressBarRed&quot;, &quot;Red&quot;, 18, 100),
IF(
Total_No_of_Actions__c = 0, IMAGE(&quot;/resource/ProgressBarGrey&quot;, &quot;Grey&quot;, 18, 100),
IMAGE(&quot;/resource/ProgressBarGreen&quot;, &quot;Green&quot;, 18,(100 * (No_of_Completed_Actions__c / Total_No_of_Actions__c))) &amp;
IMAGE(&quot;/resource/ProgressBarGrey&quot;, &quot;Grey&quot;, 18,(100 * (No_of_Pending_Actions__c / Total_No_of_Actions__c)))
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress</label>
    <type>Text</type>
</CustomField>