Agentforce/force-app/main/default/objects/Action__c/fields/Proposed_Carbon_Reduction_pa_CO2eT__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Carbon_Reduction_pa_CO2eT__c</fullName>
    <label>Proposed Carbon Reduction (pa) CO2eT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>