Agentforce/force-app/main/default/objects/Action__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <label>Related To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>NPS</fullName>
            </value>
            <value>
                <fullName>Bid</fullName>
                <isActive>false</isActive>
                <label>Bid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>