Agentforce/force-app/main/default/objects/Action__c/fields/Social_Value__c.field-meta.xml
<CustomField>
    <fullName>Social_Value__c</fullName>
    <label>Social Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>Regional Growth</fullName>
            </value>
            <value>
                <fullName>Social Innovation</fullName>
            </value>
            <value>
                <fullName>Job &amp; Skills</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>