Agentforce/force-app/main/default/objects/Action__c/fields/Sustainability_Goal__c.field-meta.xml
<CustomField>
    <fullName>Sustainability_Goal__c</fullName>
    <label>Sustainability Goal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. No Poverty</fullName>
            </value>
            <value>
                <fullName>2. Zero Hunger</fullName>
            </value>
            <value>
                <fullName>3. Good Health &amp; Wellbeing</fullName>
            </value>
            <value>
                <fullName>4. Quality Education</fullName>
            </value>
            <value>
                <fullName>5. Gender Equality</fullName>
            </value>
            <value>
                <fullName>6. Clean Water &amp; Sanitisation</fullName>
            </value>
            <value>
                <fullName>7. Affordable &amp; Clean Energy</fullName>
            </value>
            <value>
                <fullName>8. Decent Work &amp; Economic Growth</fullName>
            </value>
            <value>
                <fullName>9. Industry Innovation &amp; Infrastructure</fullName>
            </value>
            <value>
                <fullName>10. Reduced Inequality</fullName>
            </value>
            <value>
                <fullName>11. Sustainable Cities &amp; Communities</fullName>
            </value>
            <value>
                <fullName>12. Responsible Consumption &amp; Production</fullName>
            </value>
            <value>
                <fullName>13. Climate Action</fullName>
            </value>
            <value>
                <fullName>14. Life Below Water</fullName>
            </value>
            <value>
                <fullName>15. Life on Land</fullName>
            </value>
            <value>
                <fullName>16. Peace, Justice &amp; Strong Institutions</fullName>
            </value>
            <value>
                <fullName>17. Partnership For the Goals</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>