Agentforce/force-app/main/default/objects/Action__c/fields/Total_No_of_Actions__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Actions__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Child Actions related to the Parent Action.</description>
    <label>Total # Actions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>