Agentforce/force-app/main/default/objects/Action__c/fields/X1_Day_after__c.field-meta.xml
<CustomField>
    <fullName>X1_Day_after__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-136 to receive a notification 1 and 7  days after a users Action becomes overdue</description>
    <label>1 Day after</label>
    <type>Checkbox</type>
</CustomField>