Agentforce/force-app/main/default/objects/Action__c/fields/X7_Days_after_Notification__c.field-meta.xml
<CustomField>
    <fullName>X7_Days_after_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-136 to receive a notification 1 and 7  days after a users Action becomes overdue</description>
    <label>7 Days after Notification</label>
    <type>Checkbox</type>
</CustomField>