Agentforce/force-app/main/default/objects/Action__c/fields/X7_Days_prior_Notification__c.field-meta.xml
<CustomField>
    <fullName>X7_Days_prior_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-139 to receive a notification 7 and 2 days prior to my action due date</description>
    <label>7 Days prior Notification</label>
    <type>Checkbox</type>
</CustomField>