Agentforce/force-app/main/default/objects/Action__c/recordTypes/Account_Plan.recordType-meta.xml
<RecordType>
    <fullName>Account_Plan</fullName>
    <active>false</active>
    <label>Account Plan</label>
</RecordType>