Agentforce/force-app/main/default/objects/Action__c/recordTypes/Action.recordType-meta.xml
<RecordType>
    <fullName>Action</fullName>
    <active>true</active>
    <description>Standard Action Record Type</description>
    <label>Action</label>
</RecordType>