Agentforce/force-app/main/default/objects/Action__c/recordTypes/Bid_Management.recordType-meta.xml
<RecordType>
    <fullName>Bid_Management</fullName>
    <active>false</active>
    <label>Bid Management</label>
</RecordType>