Agentforce/force-app/main/default/objects/Action__c/recordTypes/NPS.recordType-meta.xml
<RecordType>
    <fullName>NPS</fullName>
    <active>false</active>
    <label>NPS</label>
</RecordType>