Agentforce/force-app/main/default/objects/Action__c/recordTypes/Parent.recordType-meta.xml
<RecordType>
    <fullName>Parent</fullName>
    <active>true</active>
    <description>Parent Action used to group related Actions together</description>
    <label>Parent</label>
</RecordType>