Agentforce/force-app/main/default/objects/Action__c/recordTypes/Retention.recordType-meta.xml
<RecordType>
    <fullName>Retention</fullName>
    <active>false</active>
    <label>Retention</label>
</RecordType>