Agentforce/force-app/main/default/objects/Action__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>Account__c</columns>
    <columns>Parent_Action__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Owner_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>