Agentforce/force-app/main/default/objects/Action__c/listViews/My_Actions.listView-meta.xml
<ListView>
    <fullName>My_Actions</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Summary__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Percentage_Complete__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Actions</label>
</ListView>